--- a/index.html
+++ b/index.html
@@ -23,8 +23,22 @@
         </ul>
       </nav>
       <ul class="contact">
-        <li class="contact-element"><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="contact-element"><a class="contact-link" href="tel:+52 55 5529 6000">+52 55 5529 6000</a></li>
+        <li class="contact-element">
+          <a class="contact-link" href="mailto:info@devstudio.com">
+            <svg width="16" heigth="12">
+              <use href="./IMAGES/ICONS/symbol-defs-header.svg#icon-headersobre"></use>
+            </svg>
+            info@devstudio.com
+          </a>
+        </li>
+
+        <li class="contact-element">
+          <a class="contact-link" href="tel:+52 55 5529 6000">
+            <svg width="10" heigth="16">
+              <use href="./IMAGES/ICONS/symbol-defs-header.svg#icon-headertelfono-inteligente"></use>
+            </svg>
+            +52 55 5529 6000</a>
+        </li>
       </ul>
     </div>
   </header>
@@ -44,6 +58,11 @@
     <section class="about-us container section">
       <ul class="about-us-list">
         <li class="about-item">
+          <div class=" ground-about">
+            <svg class="about-us-icon" width="70" height="70">
+              <use href="./IMAGES/ICONS/symbol-defs.svg#icon-aboutusantena"></use>
+            </svg>
+          </div>
           <h3 class="about-title">ATENCIÓN A LOS DETALLES</h3>
           <p class="about-text">
             Nos adentramos en todos los detalles y procesos de su negocio, para
@@ -52,6 +71,11 @@
         </li>
 
         <li class="about-item">
+          <div class="background-about">
+            <svg class="about-us-icon" width="70" height="70">
+              <use href="./IMAGES/ICONS/symbol-defs.svg#icon-aboutusreloj"></use>
+            </svg>
+          </div>
           <h3 class="about-title">PUNTUALIDAD</h3>
           <p class="about-text">
             Con nosotros, usted puede sentirse seguro y protegido. Un principio
@@ -61,6 +85,11 @@
         </li>
 
         <li class="about-item">
+          <div class="background-about">
+            <svg class="about-us-icon" width="70" height="70">
+              <use href="./IMAGES/ICONS/symbol-defs.svg#icon-aboutusdiagrama"></use>
+            </svg>
+          </div>
           <h3 class="about-title">PLANIFICACIÓN</h3>
           <p class="about-text">
             Usted podrá observar y participar en cada fase del desarrollo y
@@ -68,6 +97,11 @@
           </p>
         </li>
         <li class="about-item">
+          <div class="background-about">
+            <svg class="about-us-icon" width="70" height="70">
+              <use href="./IMAGES/ICONS/symbol-defs.svg#icon-aboutusastronauta"></use>
+            </svg>
+          </div>
           <h3 class="about-title">TECNOLOGÍA MODERNA</h3>
           <p class="about-text">
             Usamos herramientas innovadoras para resolver las tareas asignadas.
@@ -99,24 +133,203 @@
             <img src="IMAGES/andres-cubo.jpg" alt="" width="270px" height="260px" />
             <h3 class="team-name"><b>Andrés Cubo</b></h3>
             <p class="team-position">Diseñador de Productos</p>
+            <ul class="social-networks-list">
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-ginstagram-g"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gtwitter-g"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gfacebook-g"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-glinkedin-g"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
+
+
+
+
           <li class="team-item">
             <img src="IMAGES/carla-palacios.jpg" alt="" width="270px" height="260px" />
             <h3 class="team-name"><b>Carla Palacios</b></h3>
             <p class="team-position">Desarrolladora Frontend</p>
+            <ul class="social-networks-list">
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-ginstagram-g"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gtwitter-g"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gfacebook-g"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-glinkedin-g"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
+
+
+
           <li class="team-item">
             <img src="IMAGES/mario-dorado.jpg" alt="" width="270px" height="260px" />
             <h3 class="team-name"><b>Mario Dorado</b></h3>
             <p class="team-position">Marketing</p>
+            <ul class="social-networks-list">
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-ginstagram-g"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gtwitter-g"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gfacebook-g"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-glinkedin-g"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
+
+
           <li class="team-item">
             <img src="IMAGES/pablo-mijangos.jpg" alt="" width="270px" height="260px" />
             <h3 class="team-name"><b>Pablo Mijangos</b></h3>
             <p class="team-position">Diseñador IU</p>
+            <ul class="social-networks-list">
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-ginstagram-g"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gtwitter-g"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gfacebook-g"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="social-networks-item">
+                  <svg width="20" height="20">
+                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-glinkedin-g"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
+    </section>
+
+    <!--CLIENTES REGULARES-->
+
+    <section class="regular-clients container section">
+      <h2 class="clients-title">Clientes Regulares</h2>
+      <ul class="clients-list">
+        <li class="clients-item">
+          <a href="#" class="clients-icon-left link">
+            <svg width="106" height="52">
+              <use href="./IMAGES/ICONS/symbol-defs-logos.svg#icon-LogosLogo0"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients-item">
+          <a href="#" class="clients-icon-left link">
+            <svg width="106" height="52">
+              <use href="./IMAGES/ICONS/symbol-defs-logos.svg#icon-LogosLogo1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients-item">
+          <a href="#" class="clients-icon-left link">
+            <svg width="106" height="52">
+              <use href="./IMAGES/ICONS/symbol-defs-logos.svg#icon-LogosLogo2"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients-item">
+          <a href="#" class="clients-icon-left link">
+            <svg width="106" height="52 ">
+              <use href="./IMAGES/ICONS/symbol-defs-logos.svg#icon-LogosLogo3"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients-item">
+          <a href="#" class="clients-icon link">
+            <svg width="106" height="52 ">
+              <use href="./IMAGES/ICONS/symbol-defs-logos.svg#icon-LogosLogo4"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="clients-item">
+          <a href="#" class="clients-icon link">
+            <svg width="106" height="52">
+              <use href="./IMAGES/ICONS/symbol-defs-logos.svg#icon-LogosLogo5"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </section>
   </main>
   <!--FOOTER-->
@@ -130,6 +343,31 @@
           <li class="footer-item">+52 55 5529 6000</li>
         </ul>
       </address>
+      <div class="social-networks-footer">
+        <p class="social-networks-text">Encuentrenos en</p>
+        <ul>
+          <li class="social-networks-item-footer">
+            <svg class="social-networks-icon-footer" width="20" height="20">
+              <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rsinstagram"></use>
+            </svg>
+          </li>
+          <li class="social-networks-item-footer">
+            <svg class="social-networks-icon-footer" width="20" height="20">
+              <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rstwitter"></use>
+            </svg>
+          </li>
+          <li class="social-networks-item-footer">
+            <svg class="social-networks-icon-footer" width="20" height="20">
+              <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rsfacebook"></use>
+            </svg>
+          </li>
+          <li class="social-networks-item-footer">
+            <svg class="social-networks-icon-footer" width="20" height="20">
+              <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rslinkedin"></use>
+            </svg>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
