--- a/portafolio.html
+++ b/portafolio.html
@@ -129,6 +129,31 @@
                     <li class="footer-item">+52 55 5529 6000</li>
                 </ul>
             </address>
+            <div class="social-networks-footer">
+                <p class="social-networks-text">Encuentrenos en</p>
+                <ul>
+                    <li class="social-networks-item-footer">
+                        <svg class="social-networks-icon-footer" width="20" height="20">
+                            <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rsinstagram"></use>
+                        </svg>
+                    </li>
+                    <li class="social-networks-item-footer">
+                        <svg class="social-networks-icon-footer" width="20" height="20">
+                            <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rstwitter"></use>
+                        </svg>
+                    </li>
+                    <li class="social-networks-item-footer">
+                        <svg class="social-networks-icon-footer" width="20" height="20">
+                            <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rsfacebook"></use>
+                        </svg>
+                    </li>
+                    <li class="social-networks-item-footer">
+                        <svg class="social-networks-icon-footer" width="20" height="20">
+                            <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rslinkedin"></use>
+                        </svg>
+                    </li>
+                </ul>
+            </div>
     </footer>
 </body>
 
