--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="about-us container section">
       <ul class="about-us-list">
         <li class="about-item">
-          <div class=" ground-about">
+          <div class="background-about">
             <svg class="about-us-icon" width="70" height="70">
               <use href="./IMAGES/ICONS/symbol-defs.svg#icon-aboutusantena"></use>
             </svg>
