--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul class="contact">
         <li class="contact-element">
           <a class="contact-link" href="mailto:info@devstudio.com">
-            <svg width="16" heigth="12">
+            <svg width="16" height="12">
               <use href="./IMAGES/ICONS/symbol-defs-header.svg#icon-headersobre"></use>
             </svg>
             info@devstudio.com
@@ -34,7 +34,7 @@
 
         <li class="contact-element">
           <a class="contact-link" href="tel:+52 55 5529 6000">
-            <svg width="10" heigth="16">
+            <svg width="10" height="16">
               <use href="./IMAGES/ICONS/symbol-defs-header.svg#icon-headertelfono-inteligente"></use>
             </svg>
             +52 55 5529 6000</a>
@@ -126,7 +126,7 @@
 
     <!--EQUIPO DE TRABAJO-->
     <section class="section-team">
-      <div class="container-team">
+      <div class="container container-team">
         <h2 class=" team-title">Nuestro Equipo</h2>
         <ul class="team-list">
           <li class="team-item">
@@ -334,15 +334,17 @@
   </main>
   <!--FOOTER-->
   <footer class="footer-final">
-    <div class="container">
-      <a class="icon-two" href="/index.html">WebStudio</a>
-      <address>
-        <p class="footer-text">Calz. Ticomán 500, Ciudad de México, CDMX, México</p>
-        <ul class="footer-info">
-          <li class="footer-item">info@example.com</li>
-          <li class="footer-item">+52 55 5529 6000</li>
-        </ul>
-      </address>
+    <div class="container" style="display: flex; gap: 20px;">
+      <div class="container">
+        <a class="icon-two" href="/index.html">WebStudio</a>
+        <address>
+          <p class="footer-text">Calz. Ticomán 500, Ciudad de México, CDMX, México</p>
+          <ul class="footer-info">
+            <li class="footer-item">info@example.com</li>
+            <li class="footer-item">+52 55 5529 6000</li>
+          </ul>
+        </address>
+      </div>
       <div class="social-networks-footer">
         <p class="social-networks-text">Encuentrenos en</p>
         <ul>
