--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
   </main>
   <!--FOOTER-->
   <footer class="footer-final">
-    <div class="container" style="display: flex; gap: 20px;">
-      <div class="container">
+    <div class="container" style="display: flex; gap: 70px;">
+      <div>
         <a class="icon-two" href="/index.html">WebStudio</a>
         <address>
           <p class="footer-text">Calz. Ticomán 500, Ciudad de México, CDMX, México</p>
@@ -345,9 +345,10 @@
           </ul>
         </address>
       </div>
+
       <div class="social-networks-footer">
         <p class="social-networks-text">Encuentrenos en</p>
-        <ul>
+        <ul style="display: flex; gap: 10px;">
           <li class="social-networks-item-footer">
             <svg class="social-networks-icon-footer" width="20" height="20">
               <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rsinstagram"></use>
