correccion de svg
Creacion de apartado para todos los elementos svg, y correccion de direccion a los mismos en codigo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li class="contact-element">
           <a class="contact-link" href="mailto:info@devstudio.com">
             <svg width="16" height="12">
-              <use href="./IMAGES/ICONS/symbol-defs-header.svg#icon-headersobre"></use>
+              <use href="./icons.svg#icon-headersobre"></use>
             </svg>
             info@devstudio.com
           </a>
@@ -35,7 +35,7 @@
         <li class="contact-element">
           <a class="contact-link" href="tel:+52 55 5529 6000">
             <svg width="10" height="16">
-              <use href="./IMAGES/ICONS/symbol-defs-header.svg#icon-headertelfono-inteligente"></use>
+              <use href="./icons.svg#icon-headertelfono-inteligente"></use>
             </svg>
             +52 55 5529 6000</a>
         </li>
@@ -60,7 +60,7 @@
         <li class="about-item">
           <div class="background-about">
             <svg class="about-us-icon" width="70" height="70">
-              <use href="./IMAGES/ICONS/symbol-defs.svg#icon-aboutusantena"></use>
+              <use href="./icons.svg#icon-aboutusantena"></use>
             </svg>
           </div>
           <h3 class="about-title">ATENCIÓN A LOS DETALLES</h3>
@@ -73,7 +73,7 @@
         <li class="about-item">
           <div class="background-about">
             <svg class="about-us-icon" width="70" height="70">
-              <use href="./IMAGES/ICONS/symbol-defs.svg#icon-aboutusreloj"></use>
+              <use href="./icons.svg#icon-aboutusreloj"></use>
             </svg>
           </div>
           <h3 class="about-title">PUNTUALIDAD</h3>
@@ -87,7 +87,7 @@
         <li class="about-item">
           <div class="background-about">
             <svg class="about-us-icon" width="70" height="70">
-              <use href="./IMAGES/ICONS/symbol-defs.svg#icon-aboutusdiagrama"></use>
+              <use href="./icons.svg#icon-aboutusdiagrama"></use>
             </svg>
           </div>
           <h3 class="about-title">PLANIFICACIÓN</h3>
@@ -99,7 +99,7 @@
         <li class="about-item">
           <div class="background-about">
             <svg class="about-us-icon" width="70" height="70">
-              <use href="./IMAGES/ICONS/symbol-defs.svg#icon-aboutusastronauta"></use>
+              <use href="./icons.svg#icon-aboutusastronauta"></use>
             </svg>
           </div>
           <h3 class="about-title">TECNOLOGÍA MODERNA</h3>
@@ -137,28 +137,28 @@
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-ginstagram-g"></use>
+                    <use href="./icons.svg#icon-rs-ginstagram-g"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gtwitter-g"></use>
+                    <use href="./icons.svg#icon-rs-gtwitter-g"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gfacebook-g"></use>
+                    <use href="./icons.svg#icon-rs-gfacebook-g"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-glinkedin-g"></use>
+                    <use href="./icons.svg#icon-rs-glinkedin-g"></use>
                   </svg>
                 </a>
               </li>
@@ -176,28 +176,28 @@
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-ginstagram-g"></use>
+                    <use href="./icons.svg#icon-rs-ginstagram-g"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gtwitter-g"></use>
+                    <use href="./icons.svg#icon-rs-gtwitter-g"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gfacebook-g"></use>
+                    <use href="./icons.svg#icon-rs-gfacebook-g"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-glinkedin-g"></use>
+                    <use href="./icons.svg#icon-rs-glinkedin-g"></use>
                   </svg>
                 </a>
               </li>
@@ -214,28 +214,28 @@
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-ginstagram-g"></use>
+                    <use href="./icons.svg#icon-rs-ginstagram-g"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gtwitter-g"></use>
+                    <use href="./icons.svg#icon-rs-gtwitter-g"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gfacebook-g"></use>
+                    <use href="./icons.svg#icon-rs-gfacebook-g"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-glinkedin-g"></use>
+                    <use href="./icons.svg#icon-rs-glinkedin-g"></use>
                   </svg>
                 </a>
               </li>
@@ -251,28 +251,28 @@
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-ginstagram-g"></use>
+                    <use href="./icons.svg#icon-rs-ginstagram-g"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gtwitter-g"></use>
+                    <use href="./icons.svg#icon-rs-gtwitter-g"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-gfacebook-g"></use>
+                    <use href="./icons.svg#icon-rs-gfacebook-g"></use>
                   </svg>
                 </a>
               </li>
               <li>
                 <a href="#" class="social-networks-item">
                   <svg width="20" height="20">
-                    <use href="./IMAGES/ICONS/symbol-defs-rs-g.svg#icon-rs-glinkedin-g"></use>
+                    <use href="./icons.svg#icon-rs-glinkedin-g"></use>
                   </svg>
                 </a>
               </li>
@@ -290,42 +290,42 @@
         <li class="clients-item">
           <a href="#" class="clients-icon-left link">
             <svg width="106" height="52">
-              <use href="./IMAGES/ICONS/symbol-defs-logos.svg#icon-LogosLogo0"></use>
+              <use href="./icons.svg#icon-LogosLogo0"></use>
             </svg>
           </a>
         </li>
         <li class="clients-item">
           <a href="#" class="clients-icon-left link">
             <svg width="106" height="52">
-              <use href="./IMAGES/ICONS/symbol-defs-logos.svg#icon-LogosLogo1"></use>
+              <use href="./icons.svg#icon-LogosLogo1"></use>
             </svg>
           </a>
         </li>
         <li class="clients-item">
           <a href="#" class="clients-icon-left link">
             <svg width="106" height="52">
-              <use href="./IMAGES/ICONS/symbol-defs-logos.svg#icon-LogosLogo2"></use>
+              <use href="./icons.svg#icon-LogosLogo2"></use>
             </svg>
           </a>
         </li>
         <li class="clients-item">
           <a href="#" class="clients-icon-left link">
             <svg width="106" height="52 ">
-              <use href="./IMAGES/ICONS/symbol-defs-logos.svg#icon-LogosLogo3"></use>
+              <use href="./icons.svg#icon-LogosLogo3"></use>
             </svg>
           </a>
         </li>
         <li class="clients-item">
           <a href="#" class="clients-icon link">
             <svg width="106" height="52 ">
-              <use href="./IMAGES/ICONS/symbol-defs-logos.svg#icon-LogosLogo4"></use>
+              <use href="./icons.svg#icon-LogosLogo4"></use>
             </svg>
           </a>
         </li>
         <li class="clients-item">
           <a href="#" class="clients-icon link">
             <svg width="106" height="52">
-              <use href="./IMAGES/ICONS/symbol-defs-logos.svg#icon-LogosLogo5"></use>
+              <use href="./icons.svg#icon-LogosLogo5"></use>
             </svg>
           </a>
         </li>
@@ -351,22 +351,22 @@
         <ul style="display: flex; gap: 10px;">
           <li class="social-networks-item-footer">
             <svg class="social-networks-icon-footer" width="20" height="20">
-              <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rsinstagram"></use>
+              <use href="./icons.svg#icon-rsinstagram"></use>
             </svg>
           </li>
           <li class="social-networks-item-footer">
             <svg class="social-networks-icon-footer" width="20" height="20">
-              <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rstwitter"></use>
+              <use href="./icons.svg#icon-rstwitter"></use>
             </svg>
           </li>
           <li class="social-networks-item-footer">
             <svg class="social-networks-icon-footer" width="20" height="20">
-              <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rsfacebook"></use>
+              <use href="./icons.svg#icon-rsfacebook"></use>
             </svg>
           </li>
           <li class="social-networks-item-footer">
             <svg class="social-networks-icon-footer" width="20" height="20">
-              <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rslinkedin"></use>
+              <use href="./icons.svg#icon-rslinkedin"></use>
             </svg>
           </li>
         </ul>
