--- a/portafolio.html
+++ b/portafolio.html
@@ -28,7 +28,7 @@
                 <li class="contact-element">
                     <a class="contact-link" href="mailto:info@devstudio.com">
                         <svg width="16" height="12">
-                            <use href="./IMAGES/ICONS/symbol-defs-header.svg#icon-headersobre"></use>
+                            <use href="./icons.svg#icon-headersobre"></use>
                         </svg>
                         info@devstudio.com
                     </a>
@@ -37,7 +37,7 @@
                 <li class="contact-element">
                     <a class="contact-link" href="tel:+52 55 5529 6000">
                         <svg width="10" height="16">
-                            <use href="./IMAGES/ICONS/symbol-defs-header.svg#icon-headertelfono-inteligente"></use>
+                            <use href="./icons.svg#icon-headertelfono-inteligente"></use>
                         </svg>
                         +52 55 5529 6000</a>
                 </li>
@@ -146,22 +146,22 @@
                 <ul style="display: flex; gap: 10px;">
                     <li class="social-networks-item-footer">
                         <svg class="social-networks-icon-footer" width="20" height="20">
-                            <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rsinstagram"></use>
+                            <use href="./icons.svg#icon-rsinstagram"></use>
                         </svg>
                     </li>
                     <li class="social-networks-item-footer">
                         <svg class="social-networks-icon-footer" width="20" height="20">
-                            <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rstwitter"></use>
+                            <use href="./icons.svg#icon-rstwitter"></use>
                         </svg>
                     </li>
                     <li class="social-networks-item-footer">
                         <svg class="social-networks-icon-footer" width="20" height="20">
-                            <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rsfacebook"></use>
+                            <use href="./icons.svg#icon-rsfacebook"></use>
                         </svg>
                     </li>
                     <li class="social-networks-item-footer">
                         <svg class="social-networks-icon-footer" width="20" height="20">
-                            <use href="./IMAGES/ICONS/symbol-defs-RS.svg#icon-rslinkedin"></use>
+                            <use href="./icons.svg#icon-rslinkedin"></use>
                         </svg>
                     </li>
                 </ul>
